--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <div class="team-member">
                         <img src="img/grant.png" class="img-responsive img-circle" alt="Grant Oliveira" style="size: 50%;">
                         <h4>Grant Oliveira</h4>
-                        <p class="text-muted">weirdo 4eva</p>
+                        <p class="text-muted">photographer. political data analyst and writer. collector of rare antiquities. president of the San Diego parakeet fanciers society. Derek Zoolander School for Kids Who Can't Read Good (and want to learn to do other stuff good too) alum.</p>
                         <!--<ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
@@ -118,7 +118,7 @@
                     <div class="team-member">
                         <img src="img/jamie.png" class="img-responsive img-circle" alt="Jamie Oliveira">
                         <h4>Jaime Oliveira</h4>
-                        <p class="text-muted">weirdo's brother</p>
+                        <p class="text-muted">grew up on a ranch. UCSB alum. former brewer. director of commercials, short films, music videos. writer and world traveler. avid Mac Dre fan. hopes to meet Dick Cavett someday.r</p>
                         <!--<ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
