--- a/index.html
+++ b/index.html
@@ -98,12 +98,26 @@
                     <h3 class="section-subheading text-muted">We are the world famous Oliveira Brothers, Grant and Jaime, here to lead you around the world on a tour of the best festivals on the globe. Along the way we’ll get some great eats, some strong drinks, and hopefully some lifelong friends.</h3>
                 </div>
             </div>
+            <div class="col-sm-6">
+                    <div class="team-member">
+                        <img src="img/jamie.png" class="img-responsive img-circle" alt="Jamie Oliveira">
+                        <h4>Jaime Oliveira</h4>
+                        <p class="text-muted">Grew up on a ranch. UCSB alum. Former brewer. Director of commercials, short films, music videos. Writer and world traveler. Avid Mac Dre fan. Hopes to meet Dick Cavett someday.r</p>
+                        <!--<ul class="list-inline social-buttons">
+                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            </li> 
+                        </ul> -->
+                    </div>
             <div class="row">
                 <div class="col-sm-6">
                     <div class="team-member">
                         <img src="img/grant.png" class="img-responsive img-circle" alt="Grant Oliveira" style="size: 50%;">
                         <h4>Grant Oliveira</h4>
-                        <p class="text-muted">photographer. political data analyst and writer. collector of rare antiquities. president of the San Diego parakeet fanciers society. Derek Zoolander School for Kids Who Can't Read Good (and want to learn to do other stuff good too) alum.</p>
+                        <p class="text-muted">Grew up locked in a shed elesewhere on the ranch. Derek Zoolander School for Kids Who Can't Read Good (and want to learn to do other stuff good too) alum. Writer of hit musical "Hamilton". Political data analyst by day. Collector of rare antiquities. </p>
                         <!--<ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
@@ -114,20 +128,7 @@
                         </ul> -->
                     </div>
                 </div>
-                <div class="col-sm-6">
-                    <div class="team-member">
-                        <img src="img/jamie.png" class="img-responsive img-circle" alt="Jamie Oliveira">
-                        <h4>Jaime Oliveira</h4>
-                        <p class="text-muted">grew up on a ranch. UCSB alum. former brewer. director of commercials, short films, music videos. writer and world traveler. avid Mac Dre fan. hopes to meet Dick Cavett someday.r</p>
-                        <!--<ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li> 
-                        </ul> -->
-                    </div>
+                
                 </div>  
             </div>
         </div>
