--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <div class="team-member">
                         <img src="img/grant.png" class="img-responsive img-circle" alt="Grant Oliveira" style="size: 50%;">
                         <h4>Grant Oliveira</h4>
-                        <p class="text-muted">Grew up locked in a shed elesewhere on the ranch. Derek Zoolander School for Kids Who Can't Read Good (and want to learn to do other stuff good too) alum. Writer of hit musical "Hamilton". Political data analyst by day. Collector of rare antiquities. </p>
+                        <p class="text-muted">Grew up locked in a shed elsewhere on the ranch. Derek Zoolander School for Kids Who Can't Read Good (and want to learn to do other stuff good too) alum. Writer of hit musical "Hamilton". Political data analyst by day. Collector of rare antiquities. </p>
                         <!--<ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
