--- a/index.html
+++ b/index.html
@@ -348,8 +348,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading" style="color:#222">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Reach out and we'll get back to you.</h3>
+                    <h2 class="section-heading" style="color:#222">Collaborate with Us!</h2>
+                    <h3 class="section-subheading text-muted">If you're an artist, musician or chef and you want your work featured on our show, let us know!</h3>
                 </div>
             </div>
             <div class="row">
