--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <div class="team-member">
                         <img src="img/jamie.png" class="img-responsive img-circle" alt="Jamie Oliveira">
                         <h4>Jaime Oliveira</h4>
-                        <p class="text-muted">Grew up on a ranch. UCSB alum. Former brewer. Director of commercials, short films, music videos. Writer and world traveler. Avid Mac Dre fan. Hopes to meet Dick Cavett someday.r</p>
+                        <p class="text-muted">Grew up on a ranch. UCSB alum. Former brewer. Director of commercials, short films, music videos. Writer and world traveler. Avid Mac Dre fan. Hopes to meet Dick Cavett someday.</p>
                         <!--<ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
@@ -112,7 +112,7 @@
                             </li> 
                         </ul> -->
                     </div>
-                <div class="col-sm-6">
+            <div class="col-sm-6">
                     <div class="team-member">
                         <img src="img/grant.png" class="img-responsive img-circle" alt="Grant Oliveira" style="size: 50%;">
                         <h4>Grant Oliveira</h4>
