--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                     <h3 class="section-subheading text-muted">We are the world famous Oliveira Brothers, Grant and Jaime, here to lead you around the world on a tour of the best festivals on the globe. Along the way we’ll get some great eats, some strong drinks, and hopefully some lifelong friends.</h3>
                 </div>
             </div>
+            <div class="row">
             <div class="col-sm-6">
                     <div class="team-member">
                         <img src="img/jamie.png" class="img-responsive img-circle" alt="Jamie Oliveira">
@@ -116,7 +117,7 @@
                     <div class="team-member">
                         <img src="img/grant.png" class="img-responsive img-circle" alt="Grant Oliveira" style="size: 50%;">
                         <h4>Grant Oliveira</h4>
-                        <p class="text-muted">Grew up locked in a shed elsewhere on the ranch. Derek Zoolander School for Kids Who Can't Read Good (and want to learn to do other stuff good too) alum. Writer of hit musical "Hamilton". Political data analyst by day. Collector of rare antiquities. </p>
+                        <p class="text-muted">Grew up locked in a shed elsewhere on the ranch. Derek Zoolander School for Kids Who Can't Read Good (and want to learn to do other stuff good too) alum. Writer of hit musical "Hamilton". Collector of rare antiquities. </p>
                         <!--<ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
@@ -125,7 +126,6 @@
                             <li><a href="#"><i class="fa fa-linkedin"></i></a>
                             </li> 
                         </ul> -->
-                <div class="row">
                     </div>
                 </div>
                 
